--- a/ui/package.json
+++ b/ui/package.json
@@ -42,10 +42,10 @@
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.61",
     "@swc/jest": "^0.2.26",
+    "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^13.5.0",
-    "@testing-library/dom": "^10.1.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.16",
     "@types/node-fetch": "^2.6.2",
@@ -76,5 +76,9 @@
     "typedoc": "^0.25.8",
     "typescript": "^4.7.4",
     "wait-on": "^7.0.1"
+  },
+  "dependencies": {
+    "@perses-dev/plugin-system": "^0.46.0",
+    "plugin-system": "^0.1.0"
   }
 }
